--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
   "name": "estate-agent-app",
+  "homepage": "https://sathnidusanupa.github.io/estate-agent-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.1",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^19.2.3",
-    "react-datepicker": "^9.1.0",
-    "react-dom": "^19.2.3",
-    "react-icons": "^5.5.0",
-    "react-router-dom": "^7.11.0",
+    "gh-pages": "^6.1.1",
+    "react": "^18.2.0",
+    "react-datepicker": "^4.8.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
-    "react-tabs": "^6.1.0",
+    "react-tabs": "^6.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
